Fix spacing on front page sections

--- a/web/src/scss/foundation/_base.scss
+++ b/web/src/scss/foundation/_base.scss
@@ -59,7 +59,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2.5em;
+  font-size: 3.1em;
   font-weight: 300;
   color: c.$bg;
   margin: 0;
@@ -85,7 +85,8 @@ a {
 }
 
 .caption {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  text-align: right;
 }
 
 .container {
@@ -132,22 +133,10 @@ a {
   position: absolute;
   bottom: 1.2rem;
   left: -13rem;
-  height: 0.1rem;
+  height: 0.14rem;
   width: 55rem;
-  background: c.$primary;
+  background: c.$midgrey;
   z-index: -1;
-}
-
-.ctaRight {
-  position: relative;
-  margin: 2.3rem 2.8em 0 0;
-  text-align: right;
-  &::after {
-    content: url("data:image/svg+xml,%3Csvg height='3.5em' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath d='M224 273L88 409c-9 9-24 9-34 0l-22-23c-10-9-10-24 0-34l96-96-96-96c-10-10-10-25 0-34l22-23c10-9 25-9 34 0l136 136c10 9 10 25 0 34zm192-34L280 103c-9-9-24-9-34 0l-22 23c-10 9-10 24 0 33l96 97-96 96c-10 10-10 25 0 34l22 23c10 9 25 9 34 0l136-136c10-9 10-25 0-34z' fill='%233C474E'/%3E%3C/svg%3E");
-    right: -1.2em;
-    top: 0.1em;
-    position: absolute;
-  }
 }
 
 .imageGrid {
@@ -162,7 +151,9 @@ a {
 }
 
 .gridCaption {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   margin: 0.6em 0 0.6em;
+  text-align: right;
+  // text-transform: uppercase;
 }
 
