--- a/web/src/scss/foundation/_colors.scss
+++ b/web/src/scss/foundation/_colors.scss
@@ -2,7 +2,7 @@
 
 $bg: #FFFFFF;
 $lightgrey: #E2E7ED;
-$primary: #8C8C8C;
+$midgrey: #8C8C8C;
 $lightheading: #596873;
 $text: #585858;
 $darkheading: #3C474E;
