--- a/web/src/scss/header.scss
+++ b/web/src/scss/header.scss
@@ -20,16 +20,18 @@ header {
 }
 
 .colorLogo {
-  width: 9.5rem;
+  width: 12rem;
 }
 
 .logoContainer {
   position: absolute;
-  right: 4.8rem;
-  top: 4.8rem;
+  right: 1rem;
+  top: 0.4rem;
   z-index: 3;
-  background: rgba(c.$lightgrey, 0.8);
-  padding: 0.9rem 0.7rem 0.5rem 0.7rem;
+  // background: rgba(c.$lightgrey, 0.8);
+  background: radial-gradient(circle at center, rgba(c.$lightgrey, 0.8) 30%, transparent 70%);
+  // padding: 0.9rem 0.7rem 0.5rem 0.7rem;
+  padding: 3rem 2.6rem 2.6rem 2.8rem;
   border-radius: 50%;
 }
 
